--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,10 +1,10 @@
 .header{
-    height: 45vh;
+    height: max-content;
     color: white;
 }
 
 .header__container{
-    height: 100%;
+    height: max-content;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -12,7 +12,8 @@
 }
 
 .container__side{
-    height: 100%;
+    min-height: 40vh;
+    max-height: 60vh;
     display: flex;
     padding: 5px 40px;
     flex-direction: column;
@@ -20,7 +21,7 @@
 }
 
 .container__side.weather-side{
-    background-image: url("https://images.unsplash.com/photo-1559963110-71b394e7494d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80");
+    background-image: url("https://images.unsplash.com/photo-1559963110-71b394e7494d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80"); 
     background-repeat: no-repeat;
     background-size: cover;
     flex: 0.3;
@@ -35,15 +36,19 @@
     top: 0;
     left: 0;
     opacity: 0.8;
-    
 }
 
 .weather-side__info{
     z-index: 1;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 5px 40px;
 }
 
 .weather-side__info>div{
@@ -75,11 +80,16 @@
 
 .weather-forecast-container{
     background-color: #2c313b;
-    height: 15vh;
-    width: max-content;
+    min-height: 15vh;
+    max-height: max-content;
+    min-width: min-content;
+    max-width: max-content;
     margin: 15px 0px;
     display: flex;
+    flex-wrap: wrap;
     border-radius: 8px;
+    align-items: center;
+    justify-content: center;
 }
 
 .location-btn{
@@ -100,21 +110,27 @@
     font-size: 16px;
     font-weight: bold;
 }
-
-@media (max-width: 1200px) {
-}
-
-@media (max-width: 850px) {
-
-}
-
-@media (max-width: 517px) {
-    .header{
-        height: max-content;
+@media (max-width: 978px) {
+    .container__side{
+        height: 48vh;
     }
+}
+
+@media (max-width: 888px) {
     .container__side.weather-side,
     .container__side.info-side{
         flex: 1;
     }
+}
 
+@media (max-width: 840px) {
+    .container__side{
+        height: 58vh;
+    }
+}
+
+@media (max-width: 551px) {
+    .container__side{
+        height: 45vh;
+    }
 }
