add: loading, icons

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,6 +5,10 @@
     text-transform: capitalize;
 }
 
+body{
+    background-color: #2a313a;
+}
+
 li{
     list-style: none;
 }
@@ -27,4 +31,14 @@ li{
 
 .content{
     font-size: 16px;
+}
+
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
 }
