--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -4,6 +4,8 @@
     margin-left: 15px;
     margin-right: 15px;
     margin-bottom: 12px;
+    min-width: 100px;
+    max-width: 160px;
 }
 
 .weather-detail.col{
@@ -39,7 +41,7 @@
 }
 
 .forecast-hourly{
-    background-color: #2a313a;
+    background-color: #2a313a;background-color: #2a313a;
     color: white;
     width: 100%;
     padding: 20px 40px;
